Design Textbox and implement save and load

--- a/NoteKeeper.Main/MainWindow.xaml
+++ b/NoteKeeper.Main/MainWindow.xaml
@@ -7,12 +7,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:NoteKeeper.Main.ViewModels"
     Title="MainWindow"
-    Width="800"
-    Height="450"
+    Width="1280"
+    Height="720"
     mc:Ignorable="d">
-    <Grid>
+    <Grid Margin="12,16">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="Auto" />
+            <!--  This column is for the GridSplitter  -->
             <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
 
@@ -21,6 +23,28 @@
             Content="{Binding}"
             ContentTemplate="{StaticResource mainNotelistViewModel}" />
 
-        <TextBox Grid.Column="1" Text="{Binding SelectedItem.Content}" />
+        <GridSplitter
+            Grid.Column="1"
+            Width="2"
+            Margin="12,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Background="{StaticResource gray300}" />
+
+        <TextBox
+            Grid.Column="2"
+            Style="{StaticResource MainTextBoxStyle}"
+            Text="{Binding SelectedItem.Content, Mode=TwoWay}" />
+
+        <Button
+            Grid.Column="2"
+            Width="64"
+            Height="64"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Content="{StaticResource Icons.UserAdd}"
+            Style="{StaticResource CircularOnlyIconButtonStyle}" />
+
     </Grid>
+
 </Window>
