--- a/NoteKeeper.Main/App.xaml
+++ b/NoteKeeper.Main/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/Icons.xaml" />
                 <ResourceDictionary Source="/Styles/GlobalColors.xaml" />
                 <ResourceDictionary Source="/Styles/Styles.xaml" />
                 <ResourceDictionary Source="/View/ModelViews.xaml" />
