--- a/NoteKeeper.Main/MainWindow.xaml
+++ b/NoteKeeper.Main/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="NoteKeeper.Main.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:DORVPN.ExtendedControls.Controls;assembly=DORVPN.ExtendedControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:NoteKeeper.Main"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,41 +11,81 @@
     Width="1280"
     Height="720"
     mc:Ignorable="d">
-    <Grid Margin="12,16">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="Auto" />
-            <!--  This column is for the GridSplitter  -->
-            <ColumnDefinition Width="3*" />
-        </Grid.ColumnDefinitions>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
-        <ContentControl
-            Grid.Column="0"
-            Content="{Binding}"
-            ContentTemplate="{StaticResource mainNotelistViewModel}" />
+        <StackPanel
+            Grid.Row="0"
+            Margin="12,16,0,0"
+            Orientation="Horizontal">
+            <Button Command="{Binding AddNewNoteCommand}" Content="Add new note" />
+            <Button
+                Margin="8,0,0,0"
+                Command="{Binding AddNewNoteCommand}"
+                Content="Save All"
+                Style="{StaticResource LighterButtonStyle}" />
+        </StackPanel>
 
-        <GridSplitter
-            Grid.Column="1"
-            Width="2"
-            Margin="12,0"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch"
-            Background="{StaticResource gray300}" />
+        <Grid Grid.Row="1" Margin="12,16,12,16">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="Auto" />
+                <!--  This column is for the GridSplitter  -->
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
 
-        <TextBox
-            Grid.Column="2"
-            Style="{StaticResource MainTextBoxStyle}"
-            Text="{Binding SelectedItem.Content, Mode=TwoWay}" />
+            <!--  Listbox  -->
+            <ListBox
+                Grid.Column="0"
+                ItemContainerStyle="{StaticResource noteListItemsContainer}"
+                ItemsSource="{Binding Items}"
+                SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                Style="{StaticResource ListboxesBase}" />
 
-        <Button
-            Grid.Column="2"
-            Width="64"
-            Height="64"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Content="{StaticResource Icons.UserAdd}"
-            Style="{StaticResource CircularOnlyIconButtonStyle}" />
+            <!--  Sep  -->
+            <GridSplitter
+                Grid.Column="1"
+                Width="1"
+                Margin="12,0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="{StaticResource gray300}" />
 
+            <!--  Editor  -->
+            <Grid Grid.Column="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <TextBox
+                    Grid.Row="0"
+                    VerticalAlignment="Top"
+                    controls:TextBoxExtensions.HintText="Write the title"
+                    FontSize="18"
+                    FontWeight="Regular"
+                    Foreground="{StaticResource gray900}"
+                    Style="{StaticResource TextBoxStyle}"
+                    Text="{Binding SelectedItem.Title, Mode=TwoWay}" />
+
+                <Rectangle
+                    Grid.Row="1"
+                    Height="1"
+                    Margin="0,8"
+                    Fill="{StaticResource gray300}" />
+
+                <TextBox
+                    Grid.Row="2"
+                    Style="{StaticResource EditorTextBoxStyle}"
+                    Text="{Binding SelectedItem.Content, Mode=TwoWay}" />
+
+            </Grid>
+
+        </Grid>
     </Grid>
 
 </Window>
