--- a/NoteKeeper.Main/Styles/Styles.xaml
+++ b/NoteKeeper.Main/Styles/Styles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:DORVPN.ExtendedControls.Controls;assembly=DORVPN.ExtendedControls"
     xmlns:converters="clr-namespace:DORVPN.ExtendedControls.Converters;assembly=DORVPN.ExtendedControls">
 
     <!--  Listboxes  -->
@@ -28,7 +29,7 @@
                         Padding="{TemplateBinding Padding}"
                         Background="{TemplateBinding Background}"
                         BorderThickness="{TemplateBinding BorderThickness}"
-                        CornerRadius="12">
+                        CornerRadius="8">
                         <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
 
@@ -48,9 +49,9 @@
         </Setter>
     </Style>
 
+
+    <!--  Textboxes  -->
     <Style x:Key="MainTextBoxStyle" TargetType="TextBox">
-        <Setter Property="AcceptsReturn" Value="True" />
-        <Setter Property="AcceptsTab" Value="True" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontFamily" Value="{StaticResource VazirmatnFont}" />
         <Setter Property="FontSize" Value="14" />
@@ -58,6 +59,71 @@
         <Setter Property="Foreground" Value="{StaticResource gray700}" />
         <Setter Property="SelectionBrush" Value="{StaticResource Primary500}" />
     </Style>
+    <Style
+        x:Key="EditorTextBoxStyle"
+        BasedOn="{StaticResource MainTextBoxStyle}"
+        TargetType="TextBox">
+        <Setter Property="AcceptsReturn" Value="True" />
+        <Setter Property="AcceptsTab" Value="True" />
+    </Style>
+    <Style
+        x:Key="TextBoxStyle"
+        BasedOn="{StaticResource MainTextBoxStyle}"
+        TargetType="TextBox">
+
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Background" Value="{DynamicResource Background}" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Cursor" Value="IBeam" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <Grid Grid.Column="1" Margin="4,0,0,0">
+
+                            <ScrollViewer
+                                x:Name="PART_ContentHost"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                FlowDirection="LeftToRight" />
+
+                            <TextBlock
+                                x:Name="HintTextBlock"
+                                Margin="3,0,0,0"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                FontFamily="{TemplateBinding FontFamily}"
+                                FontSize="{TemplateBinding FontSize}"
+                                Foreground="{TemplateBinding BorderBrush}"
+                                IsHitTestVisible="False"
+                                Text="{Binding (controls:TextBoxExtensions.HintText), RelativeSource={RelativeSource Mode=TemplatedParent}}"
+                                Visibility="Collapsed" />
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="HintTextBlock" Property="Visibility" Value="Collapsed" />
+                        </Trigger>
+                        <Trigger Property="Text" Value="">
+                            <Setter TargetName="HintTextBlock" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
+
+
+
+
+    <!--  Buttons  -->
 
     <Style x:Key="CircularOnlyIconButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="{StaticResource Secondary500}" />
@@ -99,6 +165,86 @@
                         Fill="{StaticResource Background}"
                         OpacityMask="{Binding Converter={x:Static converters:DrawingImageToOpacityMaskConverter.Instance}}" />
                 </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="{DynamicResource Primary500}" />
+        <Setter Property="Foreground" Value="{DynamicResource Background}" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="48" />
+
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontWeight" Value="Medium" />
+        <Setter Property="FontFamily" Value="{StaticResource VazirmatnFont}" />
+
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="HorizontalContentAlignment" Value="Center" />
+        <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="Padding" Value="24,0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+
+                    <Border
+                        x:Name="back"
+                        Padding="{TemplateBinding Padding}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="8">
+
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="back" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={x:Static converters:SolidBrushColorMultiplierConverter.Instance}, ConverterParameter=1.1}" />
+                        </Trigger>
+
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="back" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={x:Static converters:SolidBrushColorMultiplierConverter.Instance}, ConverterParameter=0.94}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style
+        x:Key="LighterButtonStyle"
+        BasedOn="{StaticResource {x:Type Button}}"
+        TargetType="{x:Type Button}">
+        <Setter Property="Background" Value="{DynamicResource Primary100}" />
+        <Setter Property="Foreground" Value="{DynamicResource Primary900}" />
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+
+                    <Border
+                        x:Name="back"
+                        Padding="{TemplateBinding Padding}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="8">
+
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="back" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={x:Static converters:SolidBrushColorMultiplierConverter.Instance}, ConverterParameter=0.97}" />
+                        </Trigger>
+
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="back" Property="Background" Value="{Binding Background, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={x:Static converters:SolidBrushColorMultiplierConverter.Instance}, ConverterParameter=0.90}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
