--- a/NoteKeeper.Main/View/ModelViews.xaml
+++ b/NoteKeeper.Main/View/ModelViews.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:models="clr-namespace:NoteKeeper.Main.Models">
+    xmlns:models="clr-namespace:NoteKeeper.Main.Models"
+    xmlns:myHelper="clr-namespace:NoteKeeper.Main.Helpers">
     <DataTemplate DataType="{x:Type models:Note}">
         <StackPanel>
             <TextBlock
@@ -10,6 +11,15 @@
                 FontWeight="Medium"
                 Foreground="{StaticResource gray900}"
                 Text="{Binding Title}"
+                TextTrimming="CharacterEllipsis" />
+
+            <TextBlock
+                Margin="0,4,0,0"
+                FontFamily="{StaticResource VazirmatnFont}"
+                FontSize="14"
+                FontWeight="Regular"
+                Foreground="{StaticResource gray700}"
+                Text="{Binding Content, Converter={x:Static myHelper:ContentTrimingConverter.Instance}}"
                 TextTrimming="CharacterEllipsis" />
 
             <TextBlock
