--- a/NoteKeeper.Main/MainWindow.xaml
+++ b/NoteKeeper.Main/MainWindow.xaml
@@ -11,6 +11,14 @@
     Width="1280"
     Height="720"
     mc:Ignorable="d">
+
+    <Window.InputBindings>
+        <KeyBinding
+            Key="N"
+            Command="{Binding AddNewNoteCommand}"
+            Modifiers="Ctrl" />
+    </Window.InputBindings>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -26,6 +34,14 @@
                 Margin="8,0,0,0"
                 Command="{Binding SaveAllCommand}"
                 Content="Save All"
+                Style="{StaticResource LighterButtonStyle}" />
+
+            <Button
+                Margin="8,0,0,0"
+                Background="{StaticResource Secondary100}"
+                Command="{Binding DeleteNoteCommand}"
+                Content="Delete Selected"
+                Foreground="{StaticResource Secondary900}"
                 Style="{StaticResource LighterButtonStyle}" />
         </StackPanel>
 
