--- a/NoteKeeper.Main/Styles/Styles.xaml
+++ b/NoteKeeper.Main/Styles/Styles.xaml
@@ -211,6 +211,12 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Visibility" Value="Collapsed" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
     <Style
         x:Key="LighterButtonStyle"
