--- a/NoteKeeper.Main/Styles/Styles.xaml
+++ b/NoteKeeper.Main/Styles/Styles.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:DORVPN.ExtendedControls.Controls;assembly=DORVPN.ExtendedControls"
-    xmlns:converters="clr-namespace:DORVPN.ExtendedControls.Converters;assembly=DORVPN.ExtendedControls">
+    xmlns:converters="clr-namespace:DORVPN.ExtendedControls.Converters;assembly=DORVPN.ExtendedControls"
+    xmlns:nav="clr-namespace:DORVPN.ExtendedControls.Navigation;assembly=DORVPN.ExtendedControls">
 
     <!--  Listboxes  -->
     <Style x:Key="ListboxesBase" TargetType="ListBox">
@@ -252,6 +253,75 @@
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  Texts  -->
+
+    <Style x:Key="PageTitle" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="{StaticResource VazirmatnFont}" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="FontWeight" Value="Medium" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="Foreground" Value="{StaticResource Background}" />
+    </Style>
+
+    <!--  Pages  -->
+
+    <Style x:Key="DefaultDialogsPageStyle" TargetType="{x:Type nav:DialogPage}">
+        <Setter Property="Background" Value="#1e000000" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="VerticalContentAlignment" Value="Top" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type nav:DialogPage}">
+                    <Grid>
+                        <ContentControl Content="{TemplateBinding PreviousPageContent}" />
+                        <Button
+                            Background="{TemplateBinding Background}"
+                            Command="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=PageContainer.GoBackCommand}"
+                            Style="{x:Null}">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <Grid Background="{TemplateBinding Background}" />
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Border
+                            Margin="16,0"
+                            Padding="24,16,24,24"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            MinWidth="440"
+                            Background="{StaticResource Background}"
+                            CornerRadius="16">
+                            <StackPanel>
+
+                                <TextBlock
+                                    Foreground="{StaticResource gray700}"
+                                    Style="{StaticResource PageTitle}"
+                                    Text="{TemplateBinding Title}" />
+
+                                <Rectangle
+                                    Height="1"
+                                    Margin="-8,9,-8,0"
+                                    Fill="{StaticResource gray300}" />
+
+                                <ContentPresenter
+                                    Margin="0,16,0,0"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    Content="{TemplateBinding Content}"
+                                    ContentTemplate="{TemplateBinding ContentTemplate}" />
+
+                            </StackPanel>
+
+                        </Border>
+                    </Grid>
+
+                </ControlTemplate>
+            </Setter.Value>
+
         </Setter>
     </Style>
 
