--- a/NoteKeeper.Main/Pages/MainPage.xaml
+++ b/NoteKeeper.Main/Pages/MainPage.xaml
@@ -25,19 +25,15 @@
             <Button Command="{Binding AddNewNoteCommand}" Content="Add new note" />
             <Button
                 Margin="8,0,0,0"
-                Background="{StaticResource gray100}"
                 Command="{Binding SaveAllCommand}"
                 Content="Save All"
-                Foreground="{StaticResource gray700}"
                 Style="{StaticResource LighterButtonStyle}" />
 
             <Button
                 Margin="8,0,0,0"
-                Background="{StaticResource gray100}"
                 Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type nav:ExtendedPage}}, Path=PageContainer.NavigateOrShowDialogCommand}"
                 CommandParameter="{x:Type local:InformationDialogue}"
                 Content="Information"
-                Foreground="{StaticResource gray700}"
                 Style="{StaticResource LighterButtonStyle}" />
 
             <Button
@@ -55,7 +51,6 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="Auto" />
-                <!--  This column is for the GridSplitter  -->
                 <ColumnDefinition Width="3*" />
             </Grid.ColumnDefinitions>
 
@@ -70,44 +65,51 @@
             <!--  Sep  -->
             <GridSplitter
                 Grid.Column="1"
-                Width="1"
-                Margin="12,0"
+                Width="20"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
-                Background="{StaticResource gray300}" />
+                Background="Transparent" />
 
             <!--  Editor  -->
-            <Grid Grid.Column="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+            <Border
+                Grid.Column="2"
+                Padding="8,12"
+                Background="{StaticResource Background}"
+                BorderBrush="{StaticResource gray300}"
+                BorderThickness="1,1,1,1"
+                CornerRadius="8,8,4,4">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
 
-                <TextBox
-                    x:Name="txtTitle"
-                    Grid.Row="0"
-                    VerticalAlignment="Top"
-                    controls:TextBoxExtensions.HintText="Write the title"
-                    FontSize="18"
-                    FontWeight="Regular"
-                    Foreground="{StaticResource gray900}"
-                    Style="{StaticResource TextBoxStyle}"
-                    Text="{Binding SelectedItem.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox
+                        x:Name="txtTitle"
+                        Grid.Row="0"
+                        VerticalAlignment="Top"
+                        controls:TextBoxExtensions.HintText="Write the title"
+                        FontSize="16"
+                        FontWeight="Regular"
+                        Foreground="{StaticResource gray900}"
+                        Style="{StaticResource BorderlessTextbox}"
+                        Text="{Binding SelectedItem.Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-                <Rectangle
-                    Grid.Row="1"
-                    Height="1"
-                    Margin="0,8"
-                    Fill="{StaticResource gray300}" />
+                    <Rectangle
+                        Grid.Row="1"
+                        Height="0.5"
+                        Margin="0,8"
+                        Fill="{StaticResource gray300}" />
 
-                <TextBox
-                    Grid.Row="2"
-                    Style="{StaticResource EditorTextBoxStyle}"
-                    Text="{Binding SelectedItem.Content, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBox
+                        Grid.Row="2"
+                        Style="{StaticResource EditorTextBoxStyle}"
+                        Text="{Binding SelectedItem.Content, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-            </Grid>
+                </Grid>
 
+            </Border>
         </Grid>
     </Grid>
 </nav:ExtendedPage>
