--- a/NoteKeeper.Main/Styles/Icons.xaml
+++ b/NoteKeeper.Main/Styles/Icons.xaml
@@ -1,14 +1,78 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--  User Add  -->
-    <DrawingImage x:Key="Icons.UserAdd">
+    <DrawingImage x:Key="Icons.Add">
         <DrawingImage.Drawing>
             <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
-                <GeometryDrawing Brush="#FFF" Geometry="M5.38566,15.6959C4.19864,16.2895 3.75,16.9706 3.75,17.5 3.75,18.0294 4.19864,18.7105 5.38566,19.3041 6.52782,19.8751 8.15819,20.25 10,20.25 11.8418,20.25 13.4722,19.8751 14.6143,19.3041 15.8014,18.7105 16.25,18.0294 16.25,17.5 16.25,16.9706 15.8014,16.2895 14.6143,15.6959 13.4722,15.1249 11.8418,14.75 10,14.75 8.15819,14.75 6.52782,15.1249 5.38566,15.6959z M4.71484,14.3543C6.10618,13.6586 7.97582,13.25 10,13.25 12.0242,13.25 13.8938,13.6586 15.2852,14.3543 16.6316,15.0275 17.75,16.0964 17.75,17.5 17.75,18.9036 16.6316,19.9725 15.2852,20.6457 13.8938,21.3414 12.0242,21.75 10,21.75 7.97582,21.75 6.10618,21.3414 4.71484,20.6457 3.36836,19.9725 2.25,18.9036 2.25,17.5 2.25,16.0964 3.36836,15.0275 4.71484,14.3543z" />
-                <GeometryDrawing Brush="#FFF" Geometry="M10,3.75C8.20507,3.75 6.75,5.20507 6.75,7 6.75,8.79493 8.20507,10.25 10,10.25 11.7949,10.25 13.25,8.79493 13.25,7 13.25,5.20507 11.7949,3.75 10,3.75z M5.25,7C5.25,4.37665 7.37665,2.25 10,2.25 12.6234,2.25 14.75,4.37665 14.75,7 14.75,9.62335 12.6234,11.75 10,11.75 7.37665,11.75 5.25,9.62335 5.25,7z" />
-                <GeometryDrawing Brush="#FFF" Geometry="M16.25,11C16.25,10.5858,16.5858,10.25,17,10.25L21,10.25C21.4142,10.25 21.75,10.5858 21.75,11 21.75,11.4142 21.4142,11.75 21,11.75L17,11.75C16.5858,11.75,16.25,11.4142,16.25,11z" />
-                <GeometryDrawing Brush="#FFF" Geometry="M19,13.75C18.5858,13.75,18.25,13.4142,18.25,13L18.25,9C18.25,8.58579 18.5858,8.25 19,8.25 19.4142,8.25 19.75,8.58579 19.75,9L19.75,13C19.75,13.4142,19.4142,13.75,19,13.75z" />
+                <GeometryDrawing Geometry="M6,12L18,12 M12,6L12,18">
+                    <GeometryDrawing.Pen>
+                        <Pen
+                            Brush="#FF000000"
+                            EndLineCap="Round"
+                            LineJoin="Round"
+                            MiterLimit="1"
+                            StartLineCap="Round"
+                            Thickness="2" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
             </DrawingGroup>
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <DrawingImage x:Key="Icons.Save">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M19,21L5,21A2,2,0,0,1,3,19L3,5A2,2,0,0,1,5,3L16,3 21,8 21,19A2,2,0,0,1,19,21z">
+                    <GeometryDrawing.Pen>
+                        <Pen
+                            Brush="#FF000000"
+                            EndLineCap="Round"
+                            LineJoin="Round"
+                            StartLineCap="Round"
+                            Thickness="2" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M17,21L17,21 17,13 7,13 7,21">
+                    <GeometryDrawing.Pen>
+                        <Pen
+                            Brush="#FF000000"
+                            EndLineCap="Round"
+                            LineJoin="Round"
+                            StartLineCap="Round"
+                            Thickness="2" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+                <GeometryDrawing Geometry="F1 M24,24z M0,0z M7,3L7,3 7,8 15,8">
+                    <GeometryDrawing.Pen>
+                        <Pen
+                            Brush="#FF000000"
+                            EndLineCap="Round"
+                            LineJoin="Round"
+                            StartLineCap="Round"
+                            Thickness="2" />
+                    </GeometryDrawing.Pen>
+                </GeometryDrawing>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Icons.Key">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V24 H24 V0 H0 Z">
+                <GeometryDrawing Brush="#FF000000" Geometry="M22.0607,4.06066C22.6464,3.47487 22.6464,2.52513 22.0607,1.93934 21.4749,1.35355 20.5251,1.35355 19.9393,1.93934L11.2747,10.6039C10.1856,9.90521 8.89011,9.5 7.5,9.5 3.63401,9.5 0.5,12.634 0.5,16.5 0.5,20.366 3.63401,23.5 7.5,23.5 11.366,23.5 14.5,20.366 14.5,16.5 14.5,15.1099 14.0948,13.8144 13.3961,12.7253L16.2129,9.90838 17.4841,11.1795C18.2652,11.9606,19.5315,11.9606,20.3125,11.1795L22.7889,8.70313C23.57,7.92208,23.57,6.65575,22.7889,5.8747L21.5178,4.60354 22.0607,4.06066z M3.5,16.5C3.5,14.2909 5.29086,12.5 7.5,12.5 9.70914,12.5 11.5,14.2909 11.5,16.5 11.5,18.7091 9.70914,20.5 7.5,20.5 5.29086,20.5 3.5,18.7091 3.5,16.5z" />
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
+    <DrawingImage x:Key="Icons.Delete">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M-0.5,0 V19 H18.5 V-0.5 H0 Z">
+                <DrawingGroup.Transform>
+                    <TranslateTransform X="0.5" Y="0" />
+                </DrawingGroup.Transform>
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="#FF000000" Geometry="M4.91666667,14.8888889C4.91666667,15.3571429,5.60416667,16,6.0625,16L12.9375,16C13.3958333,16,14.0833333,15.3571429,14.0833333,14.8888889L14.0833333,6 4.91666667,6 4.91666667,14.8888889 4.91666667,14.8888889 4.91666667,14.8888889z M15,3.46500003L12.5555556,3.46500003 11.3333333,2 7.66666667,2 6.44444444,3.46500003 4,3.46500003 4,4.93000007 15,4.93000007 15,3.46500003 15,3.46500003 15,3.46500003z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
 </ResourceDictionary>
